# videostreamingplatform-recommendations

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: recommendations-ci.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
src/: config.py  db.py
src/agent/: graph.py  state.py
src/agent/nodes/: filter.py  rank.py  retrieve.py
src/api/: main.py
src/api/routes/: recommend.py
src/embeddings/: embed_videos.py  store.py
src/llm/: bedrock.py  ollama.py  provider.py
src/tools/: search_videos.py  trending.py  user_history.py
tests/: test_agent.py  test_api.py  test_api_contract.py  test_bedrock.py  test_config.py  test_db.py  test_embed_videos.py  test_embedding_store.py  test_graph.py  test_graph_end_to_end.py  test_llm_provider.py  test_ollama.py  test_rank.py  test_retrieve.py  test_tools.py  test_trending.py  test_user_history.py
